--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,9 @@
 # Name of your site (displayed in the header)
 name: Side of Fries
 
+# Site title
+title: A Crazy Title
+
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere, doing things Elsewhere
 
